--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,12 +1,12 @@
 name: Windows
 
 on:
-  # push:
-  #   branches: [ "work-sequencer" ]
+  push:
+    branches: [ "work-sequencer" ]
   # schedule:
   #   - cron: 0 0 * * 1
-  pull_request:
-    branches: [ master ]
+  # pull_request:
+  #  branches: [ master ]
 
 permissions: {}
 jobs:
@@ -25,7 +25,7 @@ jobs:
         svn checkout https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15/
         dir
         cd ~\bforartistsrepo\Bforartists
-        .\make.bat ninja
+        .\make.bat ninja lite
         dir
         cd ~\bforartistsrepo
         dir
