--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,19 +25,19 @@ jobs:
         mkdir ~\bforartistsrepo\lib
         cd ~\bforartistsrepo\lib
         svn checkout https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15/
-    - name: Cache
-      env:
-        cache-name: ${{ github.ref }}
-      uses: actions/cache@v3
-      with:
-        path: ~/bforartistsrepo
-        key: build-cache-${{ env.cache-name }}
+    # - name: Cache
+    #   env:
+    #     cache-name: ${{ github.ref }}
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ~/bforartistsrepo
+    #     key: build-cache-${{ env.cache-name }}
       
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-      # run: |
-      #  cd ~\bforartistsrepo
-      #  git clone -b work-sequencer https://github.com/zNightlord/Bforartists.git
+    - name: Clone Repository
+      # uses: actions/checkout@v3
+      run: |
+       cd ~\bforartistsrepo
+       git clone -b work-sequencer https://github.com/zNightlord/Bforartists.git
     
     - name: Print make
       run: | 
