--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Show dir
       run: |
         dir
-        cd ~\bforartistsrepo\Bforartists\bin
+        cd ~\bforartistsrepo
         dir
 
 
